partials, headers and footers

--- a/src/views/authors/index.ejs
+++ b/src/views/authors/index.ejs
@@ -1,1 +1,7 @@
-<h1>All Authors Page</h1>
+<main>
+  <div class="container">
+    <section>
+      <h1>All Authors</h1>
+    </section>
+  </div>
+</main>
