--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -14,11 +14,11 @@
     />
   </head>
   <body>
-    Before
+    <%- include('../partials/header.ejs') %>
     <br />
     <%- body %>
     <br />
-    After
+    <%- include('../partials/footer.ejs') %>
     <!-- Bootstrap JS with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
