--- a/src/views/authors/new.ejs
+++ b/src/views/authors/new.ejs
@@ -1,1 +1,17 @@
-<h1>Create New Author</h1>
+<section>
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <h3>Create new Author</h3>
+      </div>
+      <div class="card-body">
+        <form action="/authors" method="POST">
+          <div class="mb-3"><%- include('_form_fields.ejs') %></div>
+
+          <a href="/authors" class="btn btn-warning">Cancel</a>
+          <button type="submit" class="btn btn-primary">Create</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
