--- a/src/views/partials/error_message.ejs
+++ b/src/views/partials/error_message.ejs
@@ -1,5 +1,7 @@
+<% if (locals.errorMessage) { %>
 <div class="container">
   <div class="alert alert-danger">
     <h3><%= errorMessage %></h3>
   </div>
 </div>
+<% } %>
