--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -14,7 +14,8 @@
     />
   </head>
   <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %> <%-
+    include('../partials/error_message.ejs') %>
     <br />
     <%- body %>
     <br />
