--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand" href="/">Navbar</a>
       <button
         class="navbar-toggler"
@@ -33,6 +33,24 @@
               <li><a class="dropdown-item" href="/authors">List</a></li>
               <li>
                 <a class="dropdown-item" href="/authors/new">Create New</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Books
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/books">List</a></li>
+              <li>
+                <a class="dropdown-item" href="/books/new">Create New</a>
               </li>
             </ul>
           </li>
