--- a/src/views/books/new.ejs
+++ b/src/views/books/new.ejs
@@ -1,11 +1,11 @@
-<section>
+<section class="mt-4 pt-4">
   <div class="container">
     <div class="card">
       <div class="card-header">
         <h3>Create new Book</h3>
       </div>
       <div class="card-body">
-        <form action="/books" method="POST">
+        <form action="/books" method="POST" enctype="multipart/form-data">
           <div class="mb-3"><%- include('_form_fields.ejs') %></div>
 
           <a href="/books" class="btn btn-warning">Cancel</a>
