--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  <nav class="navbar fixed-bottom navbar-light bg-light">
+  <nav class="navbar navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">Fixed bottom</a>
     </div>
